# feltor

./: .find_large_objects.sh  .gitignore  .rm_big_objects.sh  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README  README.adoc  README.md  dgmethods.tex  equations.tex  global.tex  gpl-ctr.plt  t3l.C  thw.inp  vcpkg.json
inc/dg/: CMakeLists.txt  Doxyfile  Makefile  README  adaptive.h  adaptive_t.cpp  adaptive_t.cu  advection.h  algorithm.h  andersonacc.h  andersonacc_t.cpp  andersonacc_t.cu  arakawa.cuh  arakawa.h  arakawa2d_b.cu  arakawa3d_b.cu  arakawa3d_mpib.cpp  arakawa3d_mpib.cu  arakawa3d_t.cu  arakawa_b.cpp  arakawa_b.cu  arakawa_mpib.cpp  arakawa_mpib.cu  arakawa_mpit.cpp  arakawa_mpit.cu  arakawa_t.cpp  arakawa_t.cu  array.cuh  array_t.cu  arrvec1d.cuh  arrvec1d_b.cu  arrvec1d_t.cu  arrvec2d.cuh  arrvec2d_t.cu  average.cuh  average.h  average_t.cu  bathRZ_t.cu  bicgstabl.h  bicgstabl_t.cpp  (+235 more)
src/: CMakeLists.txt  README  README.adoc
src/asela/: Makefile  asela.cu  asela.cuh  asela_doc.h  asela_hpc.cpp  asela_hpc.cu  asela_mpi.cu  bessel.h  dz_geom_t.cu  geom_parameters.h  geometry_circ.h  geometry_params.txt  geometry_params_circ_Iconst_largeR0.txt  geometry_params_miniaug_woX.txt~HEAD  init.h  input.txt  parameters.h  window_params.js  window_params.txt
src/asela2D/: Makefile  asela.cu  asela_hpc.cpp  asela_hpc.cu  asela_mpi.cu  geometry_params.txt  input.txt  window_params.js
src/asela2d/: README  asela.cu  asela.cuh
src/common/: newcommands.tex  references.bib
src/convection/: Makefile  README  convection.cpp  convection_solver.h  input.txt
src/dg_lib/: Makefile  input.txt  toeflR.cu  toeflR.cuh  toefl_hpc.cu  toefl_video.cu
src/ep/: Makefile  ep.tex  parameters.h  toeflR.cu  toeflR.cuh  toefl_mpi.cu  window_params.json
src/esel/: Makefile  esel.cu  esel.cuh  esel_hpc.cu  input.txt  window_params.txt
src/esol/: CMakeLists.txt  Makefile  diag.h  esol.cpp  esol.cu  esol.h  esol.tex  init.h  init_from_file.h  parameters.h  window_params.json
src/feltor/: CMakeLists.txt  Doxyfile  Input_ex.json  Makefile  common.h  convert_b.cpp  convert_b.cu  diag_config_ex.json  dz_geom_t.cu  feltor.cpp  feltor.cu  feltor.cuh  feltor.h  feltor.sh  feltor.tex  feltor_doc.h  feltor_hpc.cpp  feltor_hpc.cu  feltor_mpi.cu  feltordiag.cpp  feltordiag.cu  feltordiag.h  geom_parameters.h  geometry.cuh  geometry.h  geometry_circ.h  geometry_params.txt  geometry_params_COMPASS_Iconst_woX.txt  geometry_params_COMPASS_woX.txt  geometry_params_TJK_singleXk.txt  geometry_params_circ_Iconst.txt  geometry_params_miniaug.txt  geometry_params_old.txt  geometry_t.cu  implicit.h  implicit_t.cu  init.h  init_from_file.h  input.txt  interpolate_in_3d.cpp  (+11 more)
src/feltor2D/: Doxyfile  Makefile  dz_geom_t.cu  feltor.cu  feltor.cuh  feltor_hpc.cpp  feltor_hpc.cu  feltor_mpi.cu  geom_parameters.h  geometry_params.txt  geometry_t.cu  input.txt  window_params.txt
src/feltor3Dslab/: feltor.cuh  parameters.h
src/feltorEM/: Makefile  dz_geom_t.cu  dzerr1n1Nxy400.txt  dzerr1n1Nxy60.txt  dzerr2n1Nxy400.txt  dzerr2n1Nxy60.txt  feltor.cu  feltor.cuh  feltor_hpc.cu  geometry.h  geometry_params.txt  geometry_params_miniaug_woX.txt  geometry_t.cu  input.txt  parameters.h  window_params.txt
src/feltorS/: Makefile  feltor.cu  feltor.cuh  feltor_hpc.cpp  feltor_hpc.cu  feltor_mpi.cu  input.txt  parameters.h
src/feltorSH/: CMakeLists.txt  Makefile  diag.h  feltor.cpp  feltor.cu  feltor.cuh  feltor.h  feltorSH.tex  feltorSHdiag.cpp  feltorSHdiag2.cpp  feltorSHvmaxdiag.cpp  feltor_hpc.cpp  feltor_hpc.cu  feltor_mpi.cu  input.txt  parameters.h  window_params.js
src/feltorSHp/: CMakeLists.txt  Makefile  diag.h  feltor.cpp  feltor.cu  feltor.cuh  feltor.h  feltorSHp.tex  feltor_hpc.cu  feltor_mpi.cu  parameters.h  window_params.txt
src/feltorSesol/: CMakeLists.txt  Makefile  diag.h  feltor.cpp  feltor.cu  feltor.cuh  feltor.h  feltorSesol.tex  feltorSesoldiag.cpp  feltor_hpc.cu  feltor_mpi.cu  input.txt  liveplot.py  parameters.h
src/feltorShw/: CMakeLists.txt  Makefile  crosscoherencdiag.cpp  diag.h  feltor.cpp  feltor.cu  feltor.cuh  feltor.h  feltorShw.tex  feltorShwdiag.cpp  feltorShwmerger.cpp  feltorShwradstat.cpp  feltorShwstat.cpp  feltor_hpc.cu  feltor_mpi.cu  growthrate.cpp  input.txt  normdiag.cpp  parameters.h  window_params.js  window_params.txt
src/feltorSlab/: Makefile  feltor.cu  feltor.cuh  feltor_hpc.cu  input.txt  liveplot.py  parameters.h  window_params.txt
src/galerkin/: Makefile  generator.cpp  input.txt  parameters.h  toefl.cu  toeflR.cu  toeflR.cuh  toefl_hpc.cu  window_params.txt
src/geometry_diag/: CMakeLists.txt  Makefile  geometry_diag.cpp  geometry_diag.tex
src/hasegawa/: CMakeLists.txt  Makefile  README  hw.cpp  hw.cu  hw.cuh  hw.h  input.txt  mima.cpp  mima.cu  mima.cuh  mima.h  window_params.js  window_params.json  window_params.txt
src/heat/: CMakeLists.txt  Makefile  geom_parameters_g.h  geometry_g.h  geometry_params.txt  geometry_params_g.txt  heat.cpp  heat.cu  heat.cuh  heat.h  heat.tex  heat_hpc.cpp  heat_hpc.cu  init.h  input.txt  parameters.h  window_params.js  window_params.json  window_params.txt
src/impurities/: Makefile  README  blob.cuh  default.json  input.txt  parameters.h  toeflI.cu  toeflI.cuh  toefl_hpc  toefl_hpc.cu  toefl_hpc.cu.orig  toefl_mpi  toefl_mpi.cu  toefl_mpi.cu.orig  toefl_old.cu  vergleich.json  window_params.js  window_params.json  window_params.txt
src/innto/: Doxyfile  Makefile  README  blobs.in  dft_dft_solver.h  drt_dft_solver.h  energetics.h  innblobs.cpp  innto.cpp  innto_hpc.cpp  innto_hw.cpp  innto_per.cpp  input.txt  particle_density.h
src/interactive/: CMakeLists.txt  blueprint.h  dft_dft_solver.h  equations.h  input.txt  interactive.cpp  opencv_t.cpp
src/lamb_dipole/: CMakeLists.txt  Makefile  README  diag.h  init.h  input.txt  parameters.h  shu.cpp  shu.cu  shu.cuh  shu.h  shu.tex  shu2d_b.cu  shu_b.cu  shu_dat.cu  shu_hpc.cu  shu_t.cu  shu_time.cu
src/navier_stokes/: CMakeLists.txt  Makefile  navier_stokes.h  navier_stokes.tex  test.json
src/parallel/: Makefile  (+4 more)
(+1659 files in other folders)
